--- a/public/de/fersenschmerz.html
+++ b/public/de/fersenschmerz.html
@@ -2,16 +2,65 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Behandlung</title>
+    <title>Fersenschmerz-Behandlung mit TCM | TAI TCM Zürich</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
+        .hero-img { width: 100%; max-height: 400px; object-fit: cover; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        h1 { color: var(--tcm-dark); font-size: 2.2em; border-bottom: 3px solid var(--tcm-teal); padding-bottom: 15px; margin-bottom: 30px; }
+        h2 { color: var(--tcm-dark); margin-top: 35px; font-size: 1.4em; padding-left: 5px; }
+        .highlight-box { background: #f0f7f6; padding: 20px; border-radius: 8px; border-left: 4px solid var(--tcm-teal); margin: 15px 0 25px 0; }
+        .highlight-box p { margin: 0; }
+        .cta-section { margin-top: 60px; padding: 40px; background: #f8fbfb; border-radius: 12px; text-align: center; border: 1px solid #e0eeee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 18px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.1em; transition: 0.3s; box-shadow: 0 4px 10px rgba(127, 187, 173, 0.4); }
+        .btn-booking:hover { background: var(--tcm-dark); transform: translateY(-2px); }
+        .footer-meta { margin-top: 50px; padding-top: 30px; border-top: 1px solid #eee; color: #7f8c8d; font-size: 0.95em; }
+        .footer-meta a { color: var(--tcm-dark); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Zurück zur Übersicht</a>
-    <h1>BEHANDLUNG VON FERSENSCHMERZ MIT TCM</h1>
-    <p>Hier den Text einfügen...</p>
+    <a href="../index.html?lang=de" class="back-link">← Zurück zum Blog-Überblick</a>
+    
+    <img src="../img/akupunktur-fersenschmerz-zuerich.webp" alt="TCM Behandlung bei Fersenschmerzen Zürich" class="hero-img">
+
+    <h1>Fersenschmerzen natürlich behandeln – Wege zur Schmerzfreiheit</h1>
+
+    <h2>1. Wie versteht die TCM Fersenschmerzen?</h2>
+    <div class="highlight-box">
+        <p>Aus TCM-Sicht handelt es sich meist um „Sehnen-Bi“ oder „Knochen-Bi“ – verursacht durch Kälte/Feuchtigkeit, Überlastung, Qi-/Blutmangel oder Nierenschwäche. Typisch sind morgendlicher Anlaufschmerz und Druckschmerz direkt an der Ferse.</p>
+    </div>
+
+    <h2>2. Hilft Akupunktur bei Plantarfasziitis oder Fersensporn?</h2>
+    <div class="highlight-box">
+        <p>Ja. Akupunktur lindert Schmerzen, verbessert die Durchblutung und reduziert lokale Entzündungen. Besonders wirksam ist die Anwendung in Kombination mit Moxibustion oder Schröpfen.</p>
+    </div>
+
+    <h2>3. Kann Tuina helfen?</h2>
+    <div class="highlight-box">
+        <p>Bei chronischen Beschwerden ja – durch Lockerung der Plantarfaszie und Entlastung der Achillessehne. In akuten Phasen sollte jedoch vorsichtig behandelt werden.</p>
+    </div>
+
+    <h2>4. Sind Kräuter sinnvoll?</h2>
+    <div class="highlight-box">
+        <p>Kräuter unterstützen die Behandlung, z. B. zur Entzündungshemmung, Durchblutungsförderung oder Stärkung der Nierenenergie. Sie können sowohl innerlich als auch äußerlich angewendet werden.</p>
+    </div>
+
+    <h2>5. Was ist im Alltag wichtig?</h2>
+    <div class="highlight-box">
+        <p>Tragen Sie gedämpfte Schuhe mit Fersenkissen, vermeiden Sie langes Stehen oder Barfußlaufen. Führen Sie zudem regelmäßig Dehnübungen für Fuß und Wade durch, um die Heilung zu unterstützen.</p>
+    </div>
+
+    <div class="cta-section">
+        <h3>Linderung für Ihre Fersen</h3>
+        <p>Buchen Sie Ihren Termin bequem online über unseren Google Calendar.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Termin online vereinbaren</a>
+    </div>
+
+    <div class="footer-meta">
+        <p>Weitere Informationen: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>TAI TCM Zürich | Spezialisten für orthopädische Schmerztherapie</p>
+    </div>
 </body>
 </html>
